# TrustEscrow

./: .gitignore  CLAUDE.md  README.md  STUDENT-GUIDE.md
contracts/my-project/: Cargo.toml
contracts/my-project/frontend/: ui.html
contracts/my-project/src/: lib.rs
examples/: README.md
modules/: Cargo.toml  README.md
modules/01-environment-setup/: README.md
modules/02-crud-operations/: Cargo.toml  README.md
modules/02-crud-operations/src/: lib.rs
modules/02-crud-operations/test_snapshots/test/: test_count.1.json  test_create_and_read.1.json  test_delete.1.json  test_update.1.json  test_update_wrong_owner.1.json
modules/03-token-operations/: Cargo.toml  README.md
modules/03-token-operations/src/: lib.rs
modules/03-token-operations/test_snapshots/test/: test_burn.1.json  test_initialize.1.json  test_insufficient_transfer.1.json  test_mint_and_balance.1.json  test_transfer.1.json
modules/04-nft-operations/: Cargo.toml  README.md
modules/04-nft-operations/src/: lib.rs
modules/05-auth-patterns/: Cargo.toml  README.md
modules/05-auth-patterns/src/: lib.rs
modules/06-deploy-guide/: README.md
modules/07-common-errors/: README.md
modules/08-best-practices/: README.md
modules/09-tools-and-inspection/: README.md
modules/10-events-and-logging/: Cargo.toml  README.md
modules/10-events-and-logging/src/: lib.rs
modules/11-storage-patterns/: Cargo.toml  README.md
modules/11-storage-patterns/src/: lib.rs
modules/12-cross-contract/: Cargo.toml  README.md
modules/12-cross-contract/src/: lib.rs
modules/13-upgrades/: README.md
(+11 files in other folders)
